Fixed jump to documentation section

--- a/app/less/base.less
+++ b/app/less/base.less
@@ -128,6 +128,7 @@ hr {
   background: @color;
   color: @smoky-white;
   position: fixed;
+  top: 0;
   width: 100%;
   z-index: 100;
 
@@ -516,6 +517,12 @@ hr {
   }
 }
 
+.documentation {
+  section {
+    margin-top: 80px;
+  }
+}
+
 /**
  * App
  *
@@ -524,6 +531,7 @@ hr {
   .information {
   }
 }
+
 /**
  * Demo
  *
